# codex-agent-logger

./: .gitignore  AGENTS.md  README.md  pyproject.toml  spec
.agents/skills/spec-driven-tdd-workflow/: SKILL.md
.github/workflows/: ci.yml
scripts/: codex-logger-dev
spec-dock/: .gitignore
spec-dock/docs/: README.md  guide.md  reference_github.md  reference_naming.md  reference_sync.md  workflow_adr.md  workflow_epic.md  workflow_initiative.md  workflow_issue.md
spec-dock/initiatives/init-00001-codex-notify-json-logger/: design.md  meta.json  plan.md  report.md  requirement.md
spec-dock/initiatives/init-local-00001-codex-notify-json-logger/: design.md  meta.json  plan.md  report.md  requirement.md
spec-dock/scripts/: README.md  spec-dock
spec-dock/system/: README.md
spec-dock/system/active-none/: README.md
spec-dock/system/active-none/epic/: README.md  design.md  (+3 more)
spec-dock/templates/: README.md  adr.md
spec-dock/templates/epic/: design.md  plan.md  report.md  requirement.md
spec-dock/templates/initiative/: design.md  plan.md  report.md  requirement.md
spec-dock/templates/issue/: design.md  plan.md  report.md  requirement.md
src/codex_logger/: atomic.py  chunking.py  cli.py  console.py  env.py  gitignore.py  ids.py  locks.py  log_store.py  payload.py  summary.py  telegram.py  telegram_topics.py  timefmt.py
tests/: test_chunking.py  test_cli_args.py  test_cli_exit_codes.py  test_dev_runner_script.py  test_gitignore.py  test_log_store.py  test_summary.py  test_telegram_api_mock.py  test_telegram_diagnostics.py  test_telegram_topic_name.py
(+125 files in other folders)
